brat/test/golden/error/fanout-diff-types.brat
f(Vec(Qubit, 2)) -o Qubit, Bit
f = { [/\] }
